# encoding: utf-8
Editra
Author: Cody Precord
Copyright: (c) Cody Precord 2005-2009
License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.5.15
DATE 10/31/2009
30th Alpha Release

NEWS:

NEW: [features/improvements]

LIBRARY:

BUG FIXES:
+Fix error in handling of unknown encodings.

#-----------------------------------------------------------------------------#

VERSION 0.5.15
DATE 10/31/2009
30th Alpha Release

NEWS:

This release contains a a large number of internal changes. New features include
the ability to customize syntax highlighting and add new file type support
through xml files. Spell checking is now also supported through the use of the
enchant spell checking library.

NEW: [features/improvements]
+Syntax highlighting can be extended and overridden by user defined extensions.
+Spell checking support (requires enchant)
+Plugins can now be un-installed through plugin manager.
+Add support for STATA (patch from Jean Eid).

LIBRARY:
+New api for plugins and other clients to customize buffer context menu.
+New profile api's for registering for notifications of profile changes.

BUG FIXES:
+Fix crash that could occur when loading some binary data into buffer.
+Return unique sorted list of terms when using extended autocomp.
+Fix some color issues when running under GTK.
+Fix line number preference not being remembered on startup.
+Fix error in handling corrupted session files.
+Fix bug in auto clearing of status text that would let timer to continue
 running unnecessarily.
+Fix errors that could occur occasionally when setting status text.
+Fix bug in error reporting when file reload fails.
+Fix some compatibility issues with wxPython 2.8.4
+Fix issue where search direction could get stuck in search previous when using
 the quick search shortcuts.
+Fix crash that could occur when showing find dialog under certain cases.
